@@ -248,6 +248,7 @@ Use following options to convert into alternate image formats:
   -pam ......... save the raw RGBA samples as a color PAM
   -ppm ......... save the raw RGB samples as a color PPM
   -bmp ......... save as uncompressed BMP format
+  -tiff ........ save as uncompressed TIFF format
   -pgm ......... save the raw YUV samples as a grayscale PGM
                  file with IMC4 layout
   -yuv ......... save the raw YUV samples in flat layout
